post page design 2

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -23,10 +23,6 @@
                 <div class="p-cover">
                     <img src="/images/covers/" class="p-basecover"
                         onerror="this.onerror=null; this.closest('.p-cover').remove()">
-                    <div class="p-upscalecover-cont" id="p-upscalecover">
-                        <img src="/images/covers/" class="p-upscalecover">
-                        <i class="bi bi-zoom-in"></i>
-                    </div>
                 </div>
                 <div class="p-text">
                     <div class="p-title-cont">
@@ -108,7 +104,7 @@
             <i class="bi bi-x-lg"></i>
         </div>
     </div>
-    <img src="/images/covers/" id="fsc-img">
+    <img src="/images/covers/71GFREhtqNL.jpg" id="fsc-img">
 </div>
 
 <div class="back-to-read">
@@ -122,10 +118,6 @@
             <div class="p-cover">
                 <img src="/images/covers/71GFREhtqNL.jpg" class="p-basecover"
                     onerror="this.onerror=null; this.closest('.p-cover').remove()">
-                <div class="p-upscalecover-cont" id="p-upscalecover">
-                    <img src="/images/covers/71GFREhtqNL.jpg" class="p-upscalecover">
-                    <i class="bi bi-zoom-in"></i>
-                </div>
             </div>
             <div class="p-postinfo">
                 <div class="p-primary">
@@ -141,10 +133,16 @@
                     </div>-->
                         </div>
                     </div>
-                    <span class="p-description">
-                        After his father's death, Odin was not going to be so peaceful. Old ways died as the new
-                        skyfather born. going to be so peacefu going to be so peacefu going to be so peaceful.
-                    </span>
+                    <div class="p-body">
+                        <div class="p-cover-mobile">
+                            <img src="/images/covers/71GFREhtqNL.jpg" class="p-basecover"
+                                onerror="this.onerror=null; this.closest('.p-cover-mobile').remove()">
+                        </div>
+                        <span class="p-description">
+                            After his father's death, Odin was not going to be so peaceful. Old ways died as the new
+                            skyfather born. going to be so peacefu going to be so peacefu going to be so peaceful.
+                        </span>
+                    </div>
                 </div>
                 <div class="p-footer">
                     <div class="p-footer-wrap">
@@ -152,6 +150,7 @@
                             <i class="bi bi-hand-thumbs-up" data-action="like" data-target_type="post"></i>
                             <span class="p-likes vote_count">4</span>
                             <i class="bi bi-hand-thumbs-down" data-action="dislike" data-target_type="post"></i>
+                            <i class="bi bi-bookmark savepost"></i>
                         </div>
                         <div class="p-user">
                             <span class="p-username">
@@ -178,6 +177,24 @@
                     <span>Mystery</span>
                     <span>Adventure</span>
                     <span>Fantasy</span>
+                </div>
+                <div class="pi-details">
+                    <div class="pi-detail-column">
+                        <i class="bi bi-body-text"></i>
+                        <span class="pi-amount_of_words">12</span>
+                    </div>
+                    <div class="pi-detail-column">
+                        <i class="bi bi-chat-right"></i>
+                        <span class="pi-amount_of_comments">199</span>
+                    </div>
+                    <div class="pi-detail-column">
+                        <i class="bi bi-clock"></i>
+                        <span class="pi-last_update">1 w</span>
+                    </div>
+                    <div class="pi-detail-column">
+                        <i class="bi bi-arrow-repeat"></i>
+                        <span class="pi-last_update">1 d</span>
+                    </div>
                 </div>
             </div>
         </div>
