--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -137,7 +137,7 @@
                                     </span>
                                 </div>
                                 <div class="pi-detail-column">
-                                    <i class="bi bi-clock"></i>
+                                    <i class="bi bi-arrow-repeat"></i>
                                     <span class="pi-last_update">
 
                                     </span>
