--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -3,7 +3,6 @@ main {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  padding-top: 10px;
 }
 
 .post-wrap {
@@ -13,7 +12,7 @@ main {
 
 .post-main {
   width: 100%;
-  margin-bottom: 12px;
+  margin-bottom: 18px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -27,52 +26,56 @@ main {
   flex-grow: 1;
 }
 .post-main .psection-1 .p-cover {
-  display: flex;
+  display: none;
   align-items: center;
   flex-shrink: 0;
   width: 20%;
   min-width: 90px;
   position: relative;
+  /*.p-upscalecover-cont {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      visibility: hidden;
+      cursor: pointer;
+      transition: all 0.1s ease;
+      z-index: 10;
+
+      .p-upscalecover {
+          height: 100%;
+          width: 100%;
+          border-radius: 8px;
+          filter: grayscale(50%) brightness(60%);
+      }
+
+      i {
+          position: absolute;
+          bottom: 6px;
+          right: 10px;
+          font-size: 1.4rem;
+          opacity: 0.7;
+      }
+
+      &:hover {
+          visibility: visible;
+          height: 120%;
+          width: 120%;
+      }
+  }*/
 }
 .post-main .psection-1 .p-cover .p-basecover {
   width: 100%;
   height: auto;
   max-height: 370px;
   border-radius: 4px;
-}
-.post-main .psection-1 .p-cover .p-basecover:hover + .p-upscalecover-cont {
-  visibility: visible !important;
-  height: 120%;
-  width: 120%;
-}
-.post-main .psection-1 .p-cover .p-upscalecover-cont {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  visibility: hidden;
   cursor: pointer;
-  transition: all 0.1s ease;
-  z-index: 10;
-}
-.post-main .psection-1 .p-cover .p-upscalecover-cont .p-upscalecover {
-  height: 100%;
-  width: 100%;
-  border-radius: 8px;
-  filter: grayscale(50%) brightness(60%);
-}
-.post-main .psection-1 .p-cover .p-upscalecover-cont i {
-  position: absolute;
-  bottom: 6px;
-  right: 10px;
-  font-size: 1.4rem;
-  opacity: 0.7;
-}
-.post-main .psection-1 .p-cover .p-upscalecover-cont:hover {
-  visibility: visible;
-  height: 120%;
-  width: 120%;
+  /*&:hover+.p-upscalecover-cont {
+      visibility: visible !important;
+      height: 120%;
+      width: 120%;
+  }*/
 }
 .post-main .psection-1 .p-postinfo {
   display: flex;
@@ -112,7 +115,23 @@ main {
   display: flex;
   font-size: 2rem;
 }
-.post-main .psection-1 .p-postinfo .p-primary .p-description {
+.post-main .psection-1 .p-postinfo .p-primary .p-body {
+  display: flex;
+  align-items: flex-start;
+}
+.post-main .psection-1 .p-postinfo .p-primary .p-body .p-cover-mobile {
+  flex-shrink: 0;
+  padding-right: 14px;
+  width: 20%;
+  min-width: 90px;
+}
+.post-main .psection-1 .p-postinfo .p-primary .p-body .p-cover-mobile .p-basecover {
+  width: 100%;
+  height: auto;
+  max-height: 200px;
+  border-radius: 4px;
+}
+.post-main .psection-1 .p-postinfo .p-primary .p-body .p-description {
   font-size: 0.9rem;
   font-family: "Gudea", sans-serif;
 }
@@ -145,6 +164,12 @@ main {
 .post-main .psection-1 .p-postinfo .p-footer .p-footer-wrap .p-evaluation .p-likes {
   font-size: 1.1rem;
   padding: 0 8px;
+}
+.post-main .psection-1 .p-postinfo .p-footer .p-footer-wrap .p-evaluation .savepost {
+  margin-left: 20px;
+}
+.post-main .psection-1 .p-postinfo .p-footer .p-footer-wrap .p-evaluation .savepost.active {
+  color: #ff7d00;
 }
 .post-main .psection-1 .p-postinfo .p-footer .p-footer-wrap .p-user {
   display: flex;
@@ -226,6 +251,28 @@ main {
   border-radius: 20px;
   padding: 2px 10px;
   font-size: 0.8rem;
+}
+.post-main .psection-1 .p-postinfo .pi-details {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 14%;
+  margin-top: 10px;
+  white-space: nowrap;
+  color: var(--text-color1);
+}
+.post-main .psection-1 .p-postinfo .pi-details .pi-detail-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.post-main .psection-1 .p-postinfo .pi-details .pi-detail-column i {
+  font-size: 1.2rem;
+}
+.post-main .psection-1 .p-postinfo .pi-details .pi-detail-column span {
+  font-size: 1rem;
+  font-family: "Itim", cursive;
 }
 .post-main .psection-2 {
   display: flex;
@@ -490,15 +537,22 @@ main {
     align-items: flex-start;
   }
   .post-main .psection-1 .p-cover {
+    display: flex;
     min-width: 130px;
+  }
+  .post-main .psection-1 .p-body .p-cover-mobile {
+    display: none;
   }
   /*.back-to-read {
       text-decoration: unset;
   }*/
-  .p-upscalecover-cont i {
-    right: 14px !important;
-    font-size: 2rem !important;
-  }
+  /*
+      .p-upscalecover-cont {
+          i {
+              right: 14px !important;
+              font-size: 2rem !important;
+          }
+      }*/
   .add_comment-cont .ac-footer .comment-btn {
     text-decoration: unset;
   }
