--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -3,7 +3,6 @@ main {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
 }
 
 .post-wrap {
@@ -13,7 +12,7 @@ main {
 
 .post-main {
     width: 100%;
-    margin-bottom: 12px;
+    margin-bottom: 18px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -27,7 +26,7 @@ main {
         flex-grow: 1;
 
         .p-cover {
-            display: flex;
+            display: none;
             align-items: center;
             flex-shrink: 0;
             width: 20%;
@@ -39,15 +38,16 @@ main {
                 height: auto;
                 max-height: 370px;
                 border-radius: 4px;
+                cursor: pointer;
 
-                &:hover+.p-upscalecover-cont {
+                /*&:hover+.p-upscalecover-cont {
                     visibility: visible !important;
                     height: 120%;
                     width: 120%;
-                }
+                }*/
             }
 
-            .p-upscalecover-cont {
+            /*.p-upscalecover-cont {
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -78,7 +78,7 @@ main {
                     height: 120%;
                     width: 120%;
                 }
-            }
+            }*/
         }
 
         .p-postinfo{
@@ -122,10 +122,27 @@ main {
                         font-family: 'Gudea';
                     }*/
                 }
-
-                .p-description {
-                    font-size: 0.9rem;
-                    font-family: 'Gudea', sans-serif;
+                .p-body{
+                    display: flex;
+                    align-items: flex-start;
+                    .p-cover-mobile {
+                        flex-shrink: 0;
+                        padding-right: 14px;
+                        width: 20%;
+                        min-width: 90px;
+    
+                        .p-basecover {
+                            width: 100%;
+                            height: auto;
+                            max-height: 200px;
+                            border-radius: 4px;
+                        }
+                    }
+    
+                    .p-description {
+                        font-size: 0.9rem;
+                        font-family: 'Gudea', sans-serif;
+                    }
                 }
             }
     
@@ -159,6 +176,13 @@ main {
                         .p-likes {
                             font-size: 1.1rem;
                             padding: 0 8px;
+                        }
+                        
+                        .savepost{
+                            margin-left: 20px;
+                        }
+                        .savepost.active{
+                            color: #ff7d00;
                         }
                     }
     
@@ -256,6 +280,32 @@ main {
                     border-radius: 20px;
                     padding: 2px 10px;
                     font-size: 0.8rem;
+                }
+            }
+
+            .pi-details {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 14%;
+                margin-top: 10px;
+                white-space: nowrap;
+                color: var(--text-color1);
+
+                .pi-detail-column {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+
+                    i {
+                        font-size: 1.2rem;
+                    }
+
+                    span {
+                        font-size: 1rem;
+                        font-family: 'Itim', cursive;
+                    }
                 }
             }
         }
@@ -568,7 +618,13 @@ main {
             flex-direction: row;
             align-items: flex-start;
             .p-cover{
+                display: flex;
                 min-width: 130px;
+            }
+            .p-body{
+                .p-cover-mobile{
+                    display: none;
+                }
             }
         }
     }
@@ -576,13 +632,13 @@ main {
     /*.back-to-read {
         text-decoration: unset;
     }*/
-
+/*
     .p-upscalecover-cont {
         i {
             right: 14px !important;
             font-size: 2rem !important;
         }
-    }
+    }*/
 
     .add_comment-cont .ac-footer .comment-btn {
         text-decoration: unset;
