post page new design 3

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -17,183 +17,97 @@
 <input type="hidden" value="@Model.postid" id="postid">
 
 <template id="getpost_instance">
-    <div class="post-2" data-postid="">
-        <div class="post-card">
-            <div class="p-body">
-                <div class="p-cover">
-                    <img src="/images/covers/" class="p-basecover"
-                        onerror="this.onerror=null; this.closest('.p-cover').remove()">
-                </div>
-                <div class="p-text">
-                    <div class="p-title-cont">
-                        <span class="p-title">
-
-                        </span>
-                        <span class="p-date">
-
-                        </span>
-                    </div>
-                    <span class="p-description">
-
-                    </span>
-                </div>
-            </div>
-            <div class="p-footer">
-                <div class="p-footer-wrap">
-                    <div class="p-evaluation">
-                        <i class="" data-action="like" data-target_type="post"></i>
-                        <span class="p-likes vote_count">--</span>
-                        <i class="" data-action="dislike" data-target_type="post"></i>
-                        <span class="p-rate">
-
-                        </span>
-                    </div>
-                    <div class="p-user">
-                        <span class="p-username">
-
-                        </span>
-                        <div class="p-uimg-cont">
-                            <img src="/images/users/"
-                                onerror="this.onerror=null; this.src='/images/onerror/user_no_photo.png'">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="post-more">
-            <div class="p-actions">
-                <button type="button" id="postSaveBtn">Save</button>
-                <button type="button">Share</button>
-                <button type="button">Report</button>
-            </div>
-            <div class="pd-primary">
-                <span class="pd-type"></span>
-                <span class="pd-language"></span>
-                <span class="pd-status"></span>
-                <span class="pd-rating"></span>
-            </div>
-            <div class="pd-series">
-
-            </div>
-            <div class="pd-tags">
-
-            </div>
-        </div>
-    </div>
-</template>
-
-
-<div class="modal-chapters" id="modal-chapters">
-    <div class="mc-header">
-        <span>Chapters</span>
-        <div class="mc-close" id="mc-close">
-            <i class="bi bi-x-lg"></i>
-        </div>
-    </div>
-    <div class="mc-body">
-        <ul id="modalchapters-list">
-        </ul>
-    </div>
-</div>
-
-
-<div class="fullsize-cover-cont" id="fullsize-cover">
-    <div class="fsc-wrap" id="fsc-wrap">
-        <div class="fsc-close" id="fsc-close">
-            <i class="bi bi-x-lg"></i>
-        </div>
-    </div>
-    <img src="/images/covers/71GFREhtqNL.jpg" id="fsc-img">
-</div>
-
-<div class="back-to-read">
-    <a id="goBackToReadPage">Go back</a>
-</div>
-
-<div class="post-wrap" id="post-wrap">
-
-    <div class="post-main" data-postid="3">
+    <div class="post-main" data-postid="">
         <div class="psection-1">
             <div class="p-cover">
-                <img src="/images/covers/71GFREhtqNL.jpg" class="p-basecover"
+                <img src="/images/covers/" class="p-basecover"
                     onerror="this.onerror=null; this.closest('.p-cover').remove()">
             </div>
             <div class="p-postinfo">
                 <div class="p-primary">
                     <div class="p-title-cont">
                         <span class="p-title">
-                            Odin the Omnipotent
+                            
                         </span>
                         <div class="p-menu">
                             <i class="bi bi-three-dots"></i>
-                            <!--<div class="p-actions">
-                        <button type="button">Share</button>
-                        <button type="button">Report</button>
-                    </div>-->
                         </div>
                     </div>
                     <div class="p-body">
                         <div class="p-cover-mobile">
-                            <img src="/images/covers/71GFREhtqNL.jpg" class="p-basecover"
+                            <img src="/images/covers/" class="p-basecover"
                                 onerror="this.onerror=null; this.closest('.p-cover-mobile').remove()">
                         </div>
                         <span class="p-description">
-                            After his father's death, Odin was not going to be so peaceful. Old ways died as the new
-                            skyfather born. going to be so peacefu going to be so peacefu going to be so peaceful.
+                            
                         </span>
                     </div>
                 </div>
                 <div class="p-footer">
                     <div class="p-footer-wrap">
                         <div class="p-evaluation">
-                            <i class="bi bi-hand-thumbs-up" data-action="like" data-target_type="post"></i>
-                            <span class="p-likes vote_count">4</span>
-                            <i class="bi bi-hand-thumbs-down" data-action="dislike" data-target_type="post"></i>
+                            <i class="" data-action="like" data-target_type="post"></i>
+                            <span class="p-likes vote_count">
+
+                            </span>
+                            <i class="" data-action="dislike" data-target_type="post"></i>
                             <i class="bi bi-bookmark savepost"></i>
                         </div>
                         <div class="p-user">
                             <span class="p-username">
-                                MrBombastic
+                                
                             </span>
                             <div class="p-uimg-cont">
-                                <img src="/images/users/user1.png"
+                                <img src="/images/users/"
                                     onerror="this.onerror=null; this.src='/images/onerror/user_no_photo.png'">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="p-properties">
-                    <span class="pp-type">Story</span>
-                    <span class="pp-language">English</span>
-                    <span class="pp-status">In-Progress</span>
-                    <span class="pp-rating">E - Everyone</span>
+                    <span class="pp-type">
+                        
+                    </span>
+                    <span class="pp-language">
+                        
+                    </span>
+                    <span class="pp-status">
+                        
+                    </span>
+                    <span class="pp-rating">
+                        
+                    </span>
                 </div>
                 <div class="p-series">
-                    <span>Harry Potter</span>
-                    <span>Avatar</span>
+
                 </div>
                 <div class="p-tags">
-                    <span>Mystery</span>
-                    <span>Adventure</span>
-                    <span>Fantasy</span>
+                    
                 </div>
                 <div class="pi-details">
                     <div class="pi-detail-column">
                         <i class="bi bi-body-text"></i>
-                        <span class="pi-amount_of_words">12</span>
+                        <span class="pi-amount_of_words">
+                            
+                        </span>
                     </div>
                     <div class="pi-detail-column">
                         <i class="bi bi-chat-right"></i>
-                        <span class="pi-amount_of_comments">199</span>
+                        <span class="pi-amount_of_comments">
+                            
+                        </span>
                     </div>
                     <div class="pi-detail-column">
                         <i class="bi bi-clock"></i>
-                        <span class="pi-last_update">1 w</span>
+                        <span class="pi-publish_date">
+                            
+                        </span>
                     </div>
                     <div class="pi-detail-column">
                         <i class="bi bi-arrow-repeat"></i>
-                        <span class="pi-last_update">1 d</span>
+                        <span class="pi-last_update">
+                            
+                        </span>
                     </div>
                 </div>
             </div>
@@ -238,13 +152,36 @@
             </table>
         </div>
     </div>
+</template>
+
+
+<div class="modal-chapters" id="modal-chapters">
+    <div class="mc-header">
+        <span>Chapters</span>
+        <div class="mc-close" id="mc-close">
+            <i class="bi bi-x-lg"></i>
+        </div>
+    </div>
+    <div class="mc-body">
+        <ul id="modalchapters-list">
+        </ul>
+    </div>
+</div>
+
+
+<div class="fullsize-cover-cont" id="fullsize-cover">
+    <div class="fsc-wrap" id="fsc-wrap">
+        <div class="fsc-close" id="fsc-close">
+            <i class="bi bi-x-lg"></i>
+        </div>
+    </div>
+    <img id="fsc-img">
+</div>
+
+<div class="post-wrap" id="post-wrap">
 
 </div>
 
-<!--<div class="rate_it">
-    <button>Rate again</button>
-    <span>8/10</span>
-</div>-->
 <div class="rate_it">
     <select id="rate_it_select">
         <option value="0">--</option>
