--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -285,7 +285,6 @@ main {
   display: flex;
   justify-content: space-between;
   font-family: "Josefin Sans", sans-serif;
-  width: 100%;
   flex-wrap: wrap;
   gap: 6px;
 }
@@ -310,26 +309,44 @@ main {
 .post-main .psection-2 .p-readbtn-cont #get_chapters:hover {
   background-color: #517585;
 }
-.post-main .psection-2 .rate-table {
+.post-main .psection-2 .ratepost-cont {
   margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--text-color1);
+}
+.post-main .psection-2 .ratepost-cont .rate_the_post {
+  display: flex;
+  justify-content: center;
+  gap: 14px;
+  padding: 6px 0;
+  width: calc(100% - 40px);
+  max-width: 280px;
+  border-top: 1px solid var(--background-color2);
+  border-bottom: 1px solid var(--background-color2);
+}
+.post-main .psection-2 .ratepost-cont .rate_the_post i {
+  font-size: 1.6rem;
+}
+.post-main .psection-2 .ratepost-cont .postrate {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+  padding: 6px 0;
   width: 100%;
 }
-.post-main .psection-2 .rate-table tr .rt-type {
-  text-align: right;
-  font-size: 1.2rem;
-  font-family: "Josefin Sans";
-  padding-top: 3px;
+.post-main .psection-2 .ratepost-cont .postrate i {
+  font-size: 1rem;
 }
-.post-main .psection-2 .rate-table tr td:last-child {
-  display: flex;
-  gap: 5px;
-  padding-left: 14px;
+.post-main .psection-2 .ratepost-cont .postrate .bi-star-fill {
+  color: #ff7d00;
 }
-.post-main .psection-2 .rate-table tr td:last-child i {
-  font-size: 1.2rem;
+.post-main .psection-2 .ratepost-cont .postrate span {
+  padding-left: 10px;
+  font-family: "Gudea", cursive;
+  font-size: 1rem;
+  padding-top: 1px;
 }
 
 .fullsize-cover-cont {
