api optimization / rate system

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -120,11 +120,11 @@
             </div>
             <div class="ratepost-cont">
                 <div class="rate_the_post">
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
-                    <i class="bi bi-star"></i>
+                    <i class="bi bi-star" data-rateval="5"></i>
+                    <i class="bi bi-star" data-rateval="4"></i>
+                    <i class="bi bi-star" data-rateval="3"></i>
+                    <i class="bi bi-star" data-rateval="2"></i>
+                    <i class="bi bi-star" data-rateval="1"></i>
                 </div>
                 <div class="postrate">
                     <i class="bi bi-star"></i>
