after format optimization + post main skeleton 1

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -164,7 +164,67 @@
 </div>
 
 <div class="post-wrap" id="post-wrap">
-
+    <div class="postmain-skel">
+        <div class="pmsk-section1">
+            <div class="pmsk-cover"></div>
+            <div class="pmsk-postinfo">
+                <div class="pmsk-header">
+                    <span class="pmsk-title"></span>
+                    <i class="pmsk-menu"></i>
+                </div>
+                <div class="pmsk-desc"></div>
+                <div class="pmsk-footer">
+                    <span class="pmsk-evaluation"></span>
+                    <span class="pmsk-uname"></span>
+                    <i class="pmsk-uimg"></i>
+                </div>
+                <div class="pmsk-primary">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="pmsk-tags">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="pmsk-stats">
+                    <div class="pmsk-statcont">
+                        <i class="bi bi-body-text"></i>
+                        <span></span>
+                    </div>
+                    <div class="pmsk-statcont">
+                        <i class="bi bi-chat-right"></i>
+                        <span></span>
+                    </div>
+                    <div class="pmsk-statcont">
+                        <i class="bi bi-clock"></i>
+                        <span></span>
+                    </div>
+                    <div class="pmsk-statcont">
+                        <i class="bi bi-arrow-repeat"></i>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pmsk-section2">
+            <div class="pmsk-section2header">
+                <div class="pmsk-readbtn"></div>
+                <div class="pmsk-chaptersbtn"></div>
+            </div>
+            <div class="pmsk-rating">
+                <i class="bi bi-star"></i>
+                <i class="bi bi-star"></i>
+                <i class="bi bi-star"></i>
+                <i class="bi bi-star"></i>
+                <i class="bi bi-star"></i>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="rate_it">
