--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -10,6 +10,14 @@ main {
   margin-top: 10px;
 }
 
+.postmain-skel {
+  width: 100%;
+  margin-bottom: 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .post-main {
   width: 100%;
   margin-bottom: 18px;
@@ -31,38 +39,6 @@ main {
   width: 20%;
   min-width: 90px;
   position: relative;
-  /*.p-upscalecover-cont {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
-      width: 100%;
-      visibility: hidden;
-      cursor: pointer;
-      transition: all 0.1s ease;
-      z-index: 10;
-
-      .p-upscalecover {
-          height: 100%;
-          width: 100%;
-          border-radius: 8px;
-          filter: grayscale(50%) brightness(60%);
-      }
-
-      i {
-          position: absolute;
-          bottom: 6px;
-          right: 10px;
-          font-size: 1.4rem;
-          opacity: 0.7;
-      }
-
-      &:hover {
-          visibility: visible;
-          height: 120%;
-          width: 120%;
-      }
-  }*/
 }
 .post-main .psection-1 .p-cover .p-basecover {
   width: 100%;
@@ -70,11 +46,6 @@ main {
   max-height: 370px;
   border-radius: 4px;
   cursor: pointer;
-  /*&:hover+.p-upscalecover-cont {
-      visibility: visible !important;
-      height: 120%;
-      width: 120%;
-  }*/
 }
 .post-main .psection-1 .p-postinfo {
   display: flex;
